# claude-code-studio-next

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: GITHUB_SUBMISSION.md  MACOS_DISTRIBUTION.md  PERFORMANCE_BUDGET.md  PRODUCT_REVIEW.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_1.0.0.md  RUNTIME.md  UPLOAD_TO_GITHUB.md  USER_GUIDE.md
docs/i18n/: README.ar.md  README.en.md  README.es.md  README.fr.md  README.ru.md  README.zh-CN.md
public/: app.js  cyberpunk-resume.html  i18n.js  index.html  markdown.js  styles.css  tauri-bridge.js
public/ui/: api.js  bootstrap.js  bridge.js  chat-engine.js  command-palette.js  context-footer.js  data-loader.js  data-transfer.js  dropdowns.js  helpers.js  messages.js  modal.js  notifications.js  onboarding.js  (+8 more)
scripts/: package-portable.mjs  prepare-node-runtime.mjs  release-check.mjs
src/: agent-tasks.js  backend-host.mjs  claude-setup.js  db.js  event-bus.js  identities.js  path-security.js  provider-presets.js  skill-categories.js  teams.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: agent-tasks.test.mjs  frontend-ui-smoke.test.mjs  identity-skills.test.mjs  mcp-db.test.mjs  path-security.test.mjs  provider-connection.test.mjs  runner-args.test.mjs  session-index.test.mjs  teams.test.mjs
(+21 files in other folders)
