[package]
name = "claude-code-studio-next"
version = "0.1.0"
description = "Tauri shell for Claude Code Studio Next"
authors = ["Jevil"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
open = "5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "time"] }

